--- a/arch/arm/boot/dts/qcom/Makefile
+++ b/arch/arm/boot/dts/qcom/Makefile
@@ -104,7 +104,8 @@ dtb-$(CONFIG_ARCH_MSM8916) += msm8916-qrd-c8817d.dtb \
 	msm8916-qrd-che1-cl20_vc.dtb \
 	msm8916-qrd-che1-cl20_vd.dtb \
 	msm8916-qrd-che1-l04_va.dtb \
-	msm8916-qrd-che1-l04_vb.dtb
+	msm8916-qrd-che1-l04_vb.dtb \
+	msm8916-qrd-y550_l01.dtb
 else
 dtb-$(CONFIG_ARCH_MSM8916) += msm8916-cdp.dtb \
 	msm8916-cdp-smb1360.dtb \
